--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nurs virus
+        
+    </title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./img/IMG-20230222-WA0008.jpg">
 </head>
 <body>
 
